--- a/proj_basic/style.css
+++ b/proj_basic/style.css
@@ -28,8 +28,53 @@ video{
     height: 100%;
     width: 100%;
     object-fit: cover;
-    opacity: 0.8;
-    /* background: linear-gradient(to bottom, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)); */
+    position: fixed;
+    z-index: -1;
 
 }
 
+#main{
+    position: relative;
+    background-color: rgba(0, 0, 0, 0.37);
+}
+#page1{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+}
+#page1 h1{
+    font-size: 140px;
+    font-weight: 900;
+    position: relative;
+}
+#page1 h1::before{
+    content: "EAT. DRINK. PLAY.";
+    position: absolute;
+    color: black;
+    top: -4px;
+    left: -4px;
+    -webkit-text-stroke: 1px #95C11E;
+    z-index: -1;
+}
+#page1 h2{
+    font-size: 30px;
+    font-weight: 800;
+    margin-top: 10px;
+    margin-bottom: 20px;
+
+}
+#page1 p{
+    font-size: 22px;
+    font-weight: 500;
+    width: 40%;
+}
+#page2{
+    height: 100vh;
+    width: 100px;
+    
+}
