--- a/proj_basic/style.css
+++ b/proj_basic/style.css
@@ -46,6 +46,7 @@ video{
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    z-index: 10;
 }
 #page1 h1{
     font-size: 140px;
@@ -75,6 +76,122 @@ video{
 }
 #page2{
     height: 100vh;
-    width: 100px;
+    width: 100%;
+    z-index: 10;
     
+    
+}
+#cursor{
+    height: 20px;
+    width: 20px;
+    background-color: #95C11E;
+    border-radius: 50%;
+    position: fixed;
+    z-index: 99;
+}
+#cursor-back{
+    height: 400px;
+    width: 400px;
+    background-color: rgba(150, 193, 30, 0.169);
+    border-radius: 50%;
+    position: fixed;
+    filter: blur(50px);
+    z-index: 9;
+}
+#scroller{
+    
+    /* background-color: red; */
+    white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    position: relative;
+    z-index: 10;
+}
+#scroller::-webkit-scrollbar{
+    display: none;
+}
+#scroller-in{
+    display: inline-block;
+    white-space: nowrap;
+    animation-name: scroll;
+    animation-duration: 30s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+#scroller h4{
+    display: inline;
+    font-size: 120px;
+    font-weight: 900;
+    font-family: 'gilroy',sans-serif;
+    margin-right: 10px;
+    color: transparent;
+    transition: all linear 0.5;
+    -webkit-text-stroke: 1.2px #95C11E;
+}
+#scroller h4:hover{
+    color: #95C11E;
+}
+@keyframes scroll {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
+#about-section{
+    height: 40vh;
+    width: 100%;
+    /* background-color: red; */
+    padding: 0 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+.about-image{
+    height: 220px;
+    width: 220px;
+    border-radius: 10px;
+    object-fit: cover;
+}
+#about-us{
+
+    width: 50%;
+    text-align: center;
+    position: relative;
+    z-index: 10;
+}
+#about-us h3{
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+#about-us p{
+    font-size: 20px;
+    line-height: 20px;
+    margin: 20px;
+}
+#container{
+    background-color: red;
+    height: 60vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 70px;
+    
+}
+.card{
+    height: 80%;
+    width: 24%;
+    background-color: blue;
+    border-radius: 20px;
+    background-size: cover;
+    background-position: center;
+}
+
+#card1{
+    background-image: url();
 }
