--- a/proj_basic/style.css
+++ b/proj_basic/style.css
@@ -8,6 +8,7 @@
 html,body{
     height: 100%;
     width: 100%;
+    perspective: 800px;
 }
 #nav{
     height: 150px;
@@ -75,7 +76,7 @@ video{
     width: 40%;
 }
 #page2{
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
     z-index: 10;
     
@@ -100,7 +101,7 @@ video{
 }
 #scroller{
     
-    /* background-color: red; */
+    
     white-space: nowrap;
     overflow-x: auto;
     overflow-y: hidden;
@@ -125,9 +126,10 @@ video{
     font-weight: 900;
     font-family: 'gilroy',sans-serif;
     margin-right: 10px;
-    color: transparent;
+    color: black;
     transition: all linear 0.5;
     -webkit-text-stroke: 1.2px #95C11E;
+    text-transform: uppercase;
 }
 #scroller h4:hover{
     color: #95C11E;
@@ -143,7 +145,7 @@ video{
 #about-section{
     height: 40vh;
     width: 100%;
-    /* background-color: red; */
+    
     padding: 0 50px;
     display: flex;
     align-items: center;
@@ -174,24 +176,91 @@ video{
     margin: 20px;
 }
 #container{
-    background-color: red;
+    
     height: 60vh;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 70px;
+    position: relative;
+    z-index: 10;
     
 }
 .card{
     height: 80%;
     width: 24%;
-    background-color: blue;
+    
     border-radius: 20px;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 #card1{
-    background-image: url();
+    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/home-toptracer-1024x682.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+
+}
+#card2{
+    background-image: url(https://eiwgew27fhz.exactdn.com/wp-content/uploads/2023/02/hero-4-1024x1024.jpg?strip=all&lossy=1&sharp=1&ssl=1);
+
+}
+#card3{
+    background-image: url(elements/golf-training.png);
+}
+.overlay{
+    height: 100%;
+    width: 100%;
+    background-color: #95C11E;
+    padding: 30px;
+    padding-top: 120px;
+    opacity: 0;
+    transition: all ease 0.6s;
+}
+.card:hover .overlay{
+    opacity: 1;
+}
+.overlay h4{
+    color: black;
+    font-size: 40px;
+    text-transform: uppercase;
+    
+    font-weight: 800;
+    margin-bottom: 20px;
+}
+.overlay p{
+    color: black;
+}
+.card:hover{
+    transform: rotate3d(-1,1,0,20deg);
+    transition: all ease 0.6s;
+}
+
+#green-bar{
+    height: 30vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: linear-gradient(to left bottom,#0A9E3B,#ACE022);
+
+}
+#green-bar h4{
+    width: 45%;
+    line-height: 50px;
+    text-align: center;
+    color: black;
+    font-size: 23px;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+#green-bar img{
+    height: 100%;
+    object-fit: cover;
+    width: 14%;
+}
+#flip-image{
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+
 }
